css/responsive-and-slider.css
.heightadjust{
    height: 417px;
  }
  .slideshow-container {
    position: relative;
    height: 453px;
    width: 678px;
    overflow-y: auto;
    scroll-snap-type: y mandatory;
    scrollbar-width: none;
  }
  .slide {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 48px;
    color: #fff;
    scroll-snap-align: start;
    position: relative;
    opacity: unset!important;
  }
  .line {
    cursor: pointer;
    height: 26px;
    width: 3px;
    margin: 7px 0;
    background-color: #d348483b;
    border-radius: 6px;
    display: block;
    transition: background-color 0.6s ease;
  }
  .slide-inn{
    height: 100%;
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
  }
  .slide-inn .slideimg {
    width: 91%!important;
  }
  #slide2 .slideimg,#slide3 .slideimg{
      width: 76% !important;
  }
  .footer{
    position: absolute;
    width: 100%;
  }
  .lineactive,.lineactiveimg,.lineactiveimg2,.line:hover {
    background:transparent linear-gradient(98deg, #fe6308 0%, #ee0d73 100%) 0% 0%  no-repeat padding-box !important;
  }
  .line-container {
    position: absolute;
    top: 50%;
    right: -10px;
    transform: translateY(-50%);
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .leftline{
    left: 20px;
    right: unset!important;
  }
  .aboutslide {
    position: relative;
    height: 426px!important;
    width: 585px!important;
  }
  .aboutslide .slide{
    opacity: unset!important;
  }
  .aboutslide .line-container {
    top: 34%!important;
  }
  .slideshow-container::-webkit-scrollbar {
    display: none; /* Chrome, Safari, and Opera */
  }
  .imagewithslide .slide{
    display: contents !important;
    position: relative;
  }
  .slidediv{
    margin-bottom: 375px!important;
  }
  .imagewithslide .flex-col::-webkit-scrollbar {
    display: none; /* Chrome, Safari, and Opera */
  }
  .md-head {
    display: none
  }
  .demoslide {
    position: relative;
    margin-top: 15px;
    margin-left: 0px;
  }
  .burger {
    display: none
  }
  .resp-menu{
    display: none;
  }
  .header-menu {
    display: flex;
    align-items: center;
  }
  .menu-item {
    margin-right: 20px;
  }
  
  .menu-item-button {
    background-color: #333;
    color: #fff;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
  }
  
  .icon-burger {
    display: none;
  }
  #shape-1,
  #shape-2,
  #shape-3 {
    min-width: 250px;
      height: 250px;
      mix-blend-mode: multiply;
      filter: blur(70px);
      opacity: .4;
  }
  
  #shape-1 {
    background-color: #C4B5FD;
    left: 20px;
  }
  #shape-2 {
    background-color: #F9A8D4;
    left: 350px;
  }
  #shape-3 {
    background-color: #FCD34D;
    left: 200px;
  }
  .scale-up-center {
    animation: scale-up-center 4s cubic-bezier(0.39, 0.575, 0.565, 1)
      infinite both;
  }
  @keyframes scale-up-center {
    0% {
      transform: translate(0px, 0px) scale(1);
    }
    33% {
      transform: translate(30px, -50px) scale(1.1);
    }
    66% {
      transform: translate(-20px, 20px) scale(0.9);
    }
    100% {
      transform: translate(0px, 0px) scale(1);
    }
  }
  .fade-delay-2000 {
    animation-delay: 2s;
  }
  .fade-delay-4000 {
    animation-delay: 4s;
  }
  #featured-image {
    z-index: 10;
    margin-top: -70px;
  }
  .position-absolute{
    position: absolute;
  }
  .rounded-circle{
    border-radius: 50%;
  }
  @media screen and (max-width:1367px) {

    .hero-bg {
     
      top: -17px;
     
  }
  .scroll-parent {
    position: absolute;
    right: -10px;
    top: 53%;
}
  }
  @media screen and (max-width:1025px) {
    .hero-bg {
      height: 58%;
      width: auto;
      position: absolute;
      right: 0;
      top: unset;
      bottom: 0;
      object-fit: cover;
      width: 200%;
      max-width: 200%;
  }
  .scroll-div-new .slideshow-container {
    height: 575px;
  
}
.mob-sli-2{
  margin-top: 0px;
}
.scroll-div-new .slideimg{
  margin-top: 0px;
}
  .hero-box {
    width: 100%;
    overflow: hidden;
  }
  .head-main{
    margin-bottom: 0px;
  }
  .hero-content {
    position: relative;
    height: 100%;
    padding: 60px;
    display: flex;
    flex-direction: column;
    max-width: 100%;
    justify-content: flex-start;
    text-align: center;
  }
  .feature-cont{
    margin-top: 50px;
    /* padding: 10px; */
  }
  .color-box {
    top: 100px;
    filter: blur(80px);
    right: 0px !important;
    left: unset;
}
  .max-width-cont {
    height: 530px;
}
  .hero-content {
    position: relative;
    height: 100%;
    padding: 60px;
    display: flex;
    flex-direction: column;
    max-width: 78%;
    justify-content: flex-start;
    text-align: center;
    margin: 30px auto;
  }
  .slider-container-new2{
    margin-top: 20px;
  }
  .common-video-normal {
    margin-bottom: 0px;
    border-radius: 38px;
    transition: all 0.2s ease-in;
  }
  .slide-inn {
    height: 100%;
    display: flex;
    flex-direction: row;
  }
  .slide-inn .long-box-content {
    width: 49%;
  }
  .slideimg{
    margin-left: 0px;
  }
  .imgcontainer {
    position: relative;
    width: 50% !important;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  }
/* ... */

